--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ mpmf-pipeline/__pycache__/
 
 # All config files
 mpmf-pipeline/Config/thresholds/*.json
+mpmf-pipeline/Config/
 
 # Config files (refuses to ignore any Config files??)
 #mpmf-pipeline/Config/database-login.json
